[gd_scene load_steps=5 format=3 uid="uid://dmesmjhiuqdo4"]

[ext_resource type="Script" uid="uid://bsvy31fx78e5l" path="res://addons/easy_charts/utilities/containers/data_tooltip/data_tooltip.gd" id="1"]
[ext_resource type="Script" uid="uid://cphcx5cm4i2yx" path="res://addons/easy_charts/utilities/containers/legend/function_type.gd" id="2_0hmhi"]

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_left = 10.0
content_margin_top = 8.0
content_margin_right = 10.0
content_margin_bottom = 8.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0.784314)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 20
anti_aliasing_size = 0.65

[sub_resource type="StyleBoxEmpty" id="3"]

[node name="DataTooltip" type="PanelContainer"]
visible = false
offset_right = 50.0
offset_bottom = 63.0
mouse_filter = 2
theme_override_styles/panel = SubResource("1")
script = ExtResource("1")

[node name="PointData" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1
alignment = 1

[node name="x" type="Label" parent="PointData"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
vertical_alignment = 1

[node name="Value" type="HBoxContainer" parent="PointData"]
layout_mode = 2
size_flags_horizontal = 7
theme_override_constants/separation = 1

[node name="FunctionTypeLabel" type="Label" parent="PointData/Value"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("2_0hmhi")

[node name="VSeparator" type="VSeparator" parent="PointData/Value"]
layout_mode = 2
theme_override_constants/separation = 4
theme_override_styles/separator = SubResource("3")

[node name="Function" type="Label" parent="PointData/Value"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 5
vertical_alignment = 1

[node name="sep" type="Label" parent="PointData/Value"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 5
text = ":"
vertical_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="PointData/Value"]
layout_mode = 2
theme_override_constants/separation = 4
theme_override_styles/separator = SubResource("3")

[node name="y" type="Label" parent="PointData/Value"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 5
theme_override_colors/font_color = Color(1, 1, 1, 1)
vertical_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_DataTooltip_visibility_changed"]
